add stub for listzkchannels
